--- a/sass/style.scss
+++ b/sass/style.scss
@@ -125,8 +125,9 @@ body {
 }
 
 .fv__contents {
-
+  
 }
+
 .fv__heading {
 
 }
@@ -472,7 +473,8 @@ body {
        bottom: 100px;
        left: 0;
        max-width: 627px;
-       height: 174px;padding-top: 24px;
+       height: 174px;
+       padding-top: 24px;
        padding-left: 96px;
     }
   }
@@ -571,3 +573,4 @@ body {
   }
 
 }
+
